<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Kulu</string>
    <string name="action_settings">Settings</string>
    <string name="camera_invoice">Scan</string>
    <string name="upload_button">Button to the image to the backend</string>
    <string name="kulu_s3_tmp_bucket" translatable="false">dev_kulu_invoices</string>
    <string name="kulu_s3_access_key_id" translatable="false">AWS_ACCESS_KEY</string>
    <string name="kulu_s3_secret_access_key" translatable="false">AWS_SECRET_KEY</string>
    <string name="kulu_backend_service_url">http://192.168.56.1:3001/invoices</string>
    <string name="kulu_backend_login_url">http://192.168.56.1:3001/login</string>
    <string name="title_activity_record_expense"></string>
    <string name="hello_world">Hello world!</string>
    <string name="merchant_hint">Merchant Name</string>
    <string name="expense_date">Expense Date</string>
    <string name="expense_amount">Amount</string>
    <string name="expense_comment">Enter remarks (optional)</string>
    <string name="save">Submit</string>
    <string name="capture_invoice">Invoice</string>

    <string name="reimbursement">Reimbursement</string>
    <string name="company">Paid by Company</string>
    <string name="expense_type">Expense Type</string>
    <string name="petty_expense">No Proof</string>
    <string name="camera_expense">Take Photo</string>
    <string name="pick_date">Pick Date</string>
    <string name="login">Login</string>
    <string name="login_org_name">Company Name</string>
    <string name="login_password">Password</string>
    <string name="login_email">Email</string>
    <string name="login_user_name">Name</string>
    <string name="login_button">Log In</string>
    <string name="merchant_name">Merchant Name</string>
    <string name="emptylist">Hit the + button to add an expense.\n\n Expenses will automatically upload on network availability and disappear from this list on completion. \n\n You may turn the auto upload on/off in settings.</string>
    <string name="sync_off">Auto uploads are off. You can turn it back on from the settings.</string>
</resources>
