<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/kuluLogo"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/loginOrgName"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="55dp"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/loginOrgName"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/loginEmail"
        android:layout_centerHorizontal="true"
        android:capitalize="none"
        android:digits="qwertyuiopasdfghjklzxcvbnm"
        android:hint="@string/login_org_name"
        android:singleLine="true"
        android:inputType="text" />

    <EditText
        android:id="@+id/loginEmail"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/loginPassword"
        android:layout_centerHorizontal="true"
        android:hint="@string/login_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sign_in_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="52dp"
        android:ems="10"
        android:hint="@string/login_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/login_button"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/login_button"
        android:textColor="@color/white" />
</RelativeLayout>